Filled out personal details and introduction

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an online marketer for a Unique Manufacturing and Marketing.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born and raised in Golden, CO</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to play music, excercise, and beat my friends at Super Smash Bros.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To be a freelance full-stack web devloper</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Golden, CO</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>For career, financial, and personal indepence. Also because it's fun!</p>
     </section>
 
     <footer id="footer">
