--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>I love to play music, excercise, and beat my friends at Super Smash Bros.</p>
       <h1>What's your dream job?</h1>
-      <p>To be a freelance full-stack web devloper</p>
+      <p>To be a freelance full-stack web devloper.</p>
       <h1>Where do you live?</h1>
       <p>Golden, CO</p>
       <h1>Why do you want to be a web developer?</h1>
